My city Uploaded

--- a/Assignment 1&Lecture Slides/mycity.html
+++ b/Assignment 1&Lecture Slides/mycity.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <img src="https://goo.gl/images/4pMHNw" alt="London in Art">
+    <img src="https://www.knightsbridge.net/london/xlondon7.jpg.pagespeed.ic.dGezfJi_n4.jpg" alt="London in Art">
     <br>
     <h1>MY CITY</h1>
 
